added support for xml files as well

--- a/templates/woosterapp/index.html
+++ b/templates/woosterapp/index.html
@@ -8,3 +8,7 @@
 SearchInput: <input type="text" name="query_term">
 <input type="submit" value="Submit" />
 </form>
+
+
+<input type="file" id="myfile" webkitdirectory />
+
