--- a/templates/woosterapp/file.html
+++ b/templates/woosterapp/file.html
@@ -11,47 +11,78 @@
 		text-decoration:underline;
 		background-color:yellow;    
 	}
+		span.currhilit{
+		text-decoration:underline;
+		background-color:red;    
+	}
 </style>
 <script type="text/javascript" src="{% static "woosterapp/jquery-1.7.2.min.js"%}"></script> 
 <script>
 var prevIndex=0;
+var totalSearchedItems=0;
 var highLight = function(query_term){
 	 prevIndex = 0;
          var page = $('#all_text');
-         var pageText = page.text().replace("<span class='hilit'>","").replace("</span>");
+         var pageText = page.html().replace("<span class='hilit'>","").replace("</span>");
          var searchedText = query_term;
-         var theRegEx = new RegExp("("+searchedText+")", "igm");    
+         var theRegEx = new RegExp("("+searchedText+")", "igm");
          var newHtml = pageText.replace(theRegEx ,"<span class='hilit'>$1</span>");
          page.html(newHtml);
-    };
-var next=function(){
-	var temp;
-	if (prevIndex>=0) temp = document.getElementsByClassName("hilit")[prevIndex++];
-	if (temp===undefined) {prevIndex=0;temp = document.getElementsByClassName("hilit")[prevIndex++];alert(temp.text());}
+    },
+next=function(){
+	var temp=document.getElementsByClassName("currhilit")[0];
+	if (temp != undefined)
+	{
+		temp.className="hilit";
+	}
+	if (prevIndex>=0) temp = document.getElementsByClassName("hilit")[++prevIndex];
+	if (temp===undefined) {
+		prevIndex=0;
+		temp = document.getElementsByClassName("hilit")[++prevIndex];
+	}
+	temp.className="currhilit";
+	updateIndex();
 	temp.scrollIntoView();
 },
 prev=function(){
-	var temp;
-	if (prevIndex>0) temp = document.getElementsByClassName("hilit")[prevIndex--];
-	if (temp===undefined) {var lst = document.getElementsByClassName("hilit"); prevIndex=lst.length-1; temp.className='currhilit';}
+	var temp=document.getElementsByClassName("currhilit")[0];
+	if (temp != undefined)
+	{
+		temp.className="hilit";
+	}
+	if (prevIndex>0) temp = document.getElementsByClassName("hilit")[--prevIndex];
+	if (temp===undefined) {
+		var lst = document.getElementsByClassName("hilit"); 
+		prevIndex=lst.length; 
+		temp = document.getElementsByClassName("hilit")[--prevIndex];
+	}
+	temp.className="currhilit";
+	updateIndex();
 	temp.scrollIntoView();
+},
+init = function(query_term){
+highLight(query_term);
+totalSearchedItems=document.getElementsByClassName("hilit").length;
+updateIndex();
+},
+updateIndex = function(){
+document.getElementById("searchfor").innerHTML = (prevIndex+1)+" of "+totalSearchedItems;
 };
-$(function(){ // this will be called when the DOM is ready
-$("#searchfor").keyup(function(){highLight($("#searchfor").val())});
-});
+//$(function(){ // No need for this
+//$("#searchfor").keyup(function(){highLight($("#searchfor").val())});
+//});
 </script>
-<body onload="highLight('{{query_term}}')">
+<body onload="init('{{query_term}}')">
  <div id="top-menu"> 
-	<input type="text" id="searchfor" autofocus style="float: right; padding: 5px 10px;"/>
+	<p id="searchfor" style="float: right; padding: 5px 10px;">0 of 1</p>
 	<button type="button" name="next" value="next" onclick="next()" style="float: right; padding: 5px 10px;">Next</button>
 	<button type="button" name="prev" value="prev" onclick="prev()" style="float: right; padding: 5px 10px;">Prev</button>
 </div> 
 <div id="filecontent">
-<pre class="format">
+<pre>
 <p id="all_text">
 {{filecontent}}
 </p>
 </pre>
 <div>
-
 </body>
